template/service-route-template.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: "prometheus-_PROJECT_-tls"
  labels:
    prometheus: ibp
  name: prometheus-_PROJECT_
  namespace: ibp-monitoring
spec:
  ports:
  - name: web
    port: 9091
    protocol: TCP
    targetPort: web
  selector:
    app: prometheus
    prometheus: _PROJECT_
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-_PROJECT_
  namespace: ibp-monitoring
spec:
  port:
    targetPort: web
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-_PROJECT_
    weight: 100
